# mkdocs-back-links

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: changelog.md  faq.md  index.md  walkthrough.md
docs/concepts/: architecture.md  internals.md
docs/guides/: configure.md  customizing.md  install.md
docs/superpowers/plans/: 2026-04-29-mkdocs-back-links.md  2026-04-29-section-aware-backlinks.md
docs/superpowers/specs/: 2026-04-29-mkdocs-back-links-design.md  2026-04-29-section-aware-backlinks-design.md
src/mkdocs_back_links/: config.py  linkgraph.py  plugin.py  render.py
src/mkdocs_back_links/assets/: back_links.css  back_links.js
tests/fixtures/basic-site/: mkdocs.yml
tests/fixtures/basic-site/docs/: index.md  no-backlinks.md  orphan.md  source.md  target.md
tests/fixtures/sectioned-collapse/: mkdocs.yml
tests/fixtures/sectioned-collapse/docs/: p1.md  p2.md  p3.md  p4.md  popular.md
tests/fixtures/sectioned-site/: mkdocs.yml
tests/fixtures/sectioned-site/docs/: a.md  b.md
tests/integration/: test_build.py
tests/unit/: test_color_overrides.py  test_config.py  test_linkgraph.py  test_plugin_registration.py  test_render.py
