[project]
name = "mkdocs-back-links"
version = "0.1.0"
description = "Backlinks and graph view for Material-themed MkDocs sites"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.entry-points."mkdocs.plugins"]
back-links = "mkdocs_back_links.plugin:BackLinksPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_back_links"]
