[project]
name = "mkdocs-back-links"
version = "0.3.0"
description = "Backlinks and graph view for Material-themed MkDocs sites"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["mkdocs", "mkdocs-plugin", "material", "backlinks", "graph", "wiki"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: MkDocs",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/wo0lien/mkdocs-back-links"
Repository = "https://github.com/wo0lien/mkdocs-back-links"
Issues = "https://github.com/wo0lien/mkdocs-back-links/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.15.2",
  "pre-commit>=3.7",
]

[project.entry-points."mkdocs.plugins"]
back-links = "mkdocs_back_links.plugin:BackLinksPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_back_links"]

[tool.ruff]
extend-exclude = ["site", "dist", "docs/superpowers"]

[tool.ruff.lint]
select = [
    # "A",   # detect shadowed builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # enforce naming conventions, e.g. ClassName vs function_name
    "S",   # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "W",   # pycodestyle warnings
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "FA",  # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "TID", # Some good import practices
    "TC",  # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "BLE", # disallow catch-all exceptions
    "COM", # enforce trailing comma rules
    "DTZ", # require strict timezone manipulation with datetime
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "COM812", # Trailing comma missing (handled by formatter)
    "BLE001", # Handle blind Exception
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"] # Allow assert in tests
"**/tests/**" = [
    "S101",
    "N802",
] # Allow assert and camelCase assert methods in tests
# MkDocs plugin lifecycle hooks have framework-required signatures; some args
# (config, files, nav, page) aren't always read by the implementation.
"src/mkdocs_back_links/plugin.py" = ["ARG002"]
# Integration tests intentionally invoke the `uv` CLI by name to exercise a
# real mkdocs build; subprocess warnings are noise here.
"tests/integration/test_build.py" = ["S603", "S607"]
